# NAL-Backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  setup_database.py
guide/: AUTHENTICATION_GUIDE.md  AUTH_README.md  DEVELOPMENT_SETUP.md  USER_PROFILE_GUIDE.md
src/: __main__.py  conftest.py  logging.py  settings.py
src/app/: __init__.py
src/app/api/: __init__.py  router.py
src/app/api/auth/: __init__.py  views.py
src/app/api/monitoring/: __init__.py  views.py
src/app/api/user_profile/: __init__.py  views.py
src/app/models/: auth.py  property.py  user_profile.py
src/core/: application.py  lifetime.py
src/db/: connection.py  migrate.py
src/db/migrations/: 001_create_users_table.sql  002_create_user_profiles_table.sql  003_create_otp_table.sql  004_fix_rate_limiting.sql  005_create_refresh_tokens_table.sql  006_fix_refresh_tokens_trigger.sql
src/middleware/: auth.py  exception.py  request.py
src/services/: auth_service.py  db_auth_service.py  mail_service.py  redis_service.py  sms_service.py  user_profile_service.py
src/services/utils/: __init__.py  exceptions.py  formatter.py  json_formatter.py  loop.py  record_formatter.py  save_convo_history.py  savechat.py  util.py
src/utils/: auth_utils.py  collection_utils.py
